# pomamo

./: README.md  pyproject.toml
.github/workflows/: test.yml
pomamo/datasources/: access_data.py  cci_oc.py  cci_sst.py  era.py  etopo1.py  gebco.py  glodap.py  interpolate.py  tpxo9.py  woa.py
pomamo/grid/: __init__.py
pomamo/models/gotm/: __init__.py
pomamo/models/gotm/gotm-setup-template/: gotm.yaml
