[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pomamo"
dynamic = ["version"]
authors = [
  {name = "Jorn Bruggeman", email = "jorn@bolding-bruggeman.com"}
]
description = "Tools for setup, execution and analysis of POrtable MArine MOdels"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/BoldingBruggeman/pomamo"

[tool.hatch.build.targets.sdist]
only-include = ["pomamo"]

[tool.hatch.version]
source = "vcs"
